slides for big picture session

--- a/docs/block_1_session_2_bigpicture.Rmd
+++ b/docs/block_1_session_2_bigpicture.Rmd
@@ -32,9 +32,10 @@ class: center, middle
 class: center, middle
 
 <div>
-<img src="logos/aws.png" width = "80px"> <img src="logos/azure.png" width = "80px"> <img src="logos/cassandra.png" width = "80px"> <img src="logos/d3.png" width = "80px"> <img src="logos/docker.png" width = "80px"> <img src="logos/git.png" width = "80px"> <img src="logos/github.png" width = "80px"> <img src="logos/hadoop.png" width = "80px"> <img src="logos/highcharts.png" width = "80px"> <img src="logos/julia.png" width = "80px"> <img src="logos/matlab.png" width = "80px"> <img src="logos/mongodb.png" width = "80px"> <img src="logos/pandas.png" width = "80px"> <img src="logos/postgresql.png" width = "80px"> <img src="logos/python.png" width = "80px"> <img src="logos/rstats.png" width = "80px"> <img src="logos/rstudio.png" width = "80px"> <img src="logos/spark.png" width = "80px"> </div<
+<a href="https://aws.amazon.com/"><img src="logos/aws.png" width = "80px"></a>
+<a href="https://azure.microsoft.com/en-us/"><img src="logos/azure.png" width = "80px"></a> <a href="https://d3js.org"><img src="logos/d3.png" width = "80px"></a><a href="https://docker.com"><img src="logos/docker.png" width = "80px"></a> <img src="logos/git.png" width = "80px"> <img src="logos/github.png" width = "80px"> <img src="logos/hadoop.png" width = "80px"><a href="https://highcharts.com"><img src="logos/highcharts.png" width = "80px"></a> <img src="logos/julia.png" width = "80px"> <img src="logos/matlab.png" width = "80px"> <img src="logos/mongodb.png" width = "80px"> <img src="logos/pandas.png" width = "80px"> <img src="logos/postgresql.png" width = "80px"> <img src="logos/python.png" width = "80px"> <img src="logos/rstats.png" width = "80px"> <img src="logos/rstudio.png" width = "80px"></div>
 
-<div class="my-footer"><span><div class="footer-text" align="right">All logos on this slide are taken from projects or products websites and are share for the sake of recognizing them. Logos are NOT redistributed under a Creative Commons license.</div></span></div> 
+<div class="my-footer"><span><div class="footer-text" align="right">All logos on this slide are taken from projects' or products' websites and ared share for the sake of recognizing them. Logos are NOT redistributed under a Creative Commons license.</div></span></div> 
 
 
 
@@ -62,6 +63,9 @@ class: center, middle
 <img src="picktools.jpg">
 
 ]
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 
 ---
@@ -92,33 +96,28 @@ Note:
 - Extension repositories such as CRAN or piPy provide a broad variety of libraries.
 
 
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
 ---
 
 
 ## Editors and IDEs
 
+<div align="center">
+<img src="wizardry.jpg" width="600px" > </br>
 
-.pull-left[
+People: "Oh, you're such a wizard." Me: "No, just a carpenter." 
 
-  IDEs:
+</div>
 
-- VS Code
-- R Studio
-- pyCharm
+</br>
+
+**IDEs**: [VS Code](https://code.visualstudio.com/blogs/2017/11/15/live-share),
+R Studio, pyCharm  **Text Editors**: Atom, [Sublime](https://www.sublimetext.com/), Notepad++, Text Wrangler
 
 
-]
-
-.pull-right[
-  
-  Text Editors:
-
-- Atom
-- Sublime
-- Notepad++
-- Text Wrangler
-
-]
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 
 ---
@@ -128,29 +127,35 @@ Note:
 
 
 .pull-left[
-Version Control Systems
+
+## Git is NOT GitHub
+## Git is NOT GitHub
+## Git is NOT GitHub
+## Git is NOT GitHub
+## Git is NOT GitHub
+
+]
+
+.pull-right[
+
+**Version Control Systems**
 
 - **git**
 - SVN
 - CVS
 - mercurial
 
-(see version control by example Eric Sink)
-]
 
-.pull-right[
 
-Git Platforms (git + web GUI + PM tools)
+**Git Platforms (git + web GUI + PM tools)**
 
 - GitHub
 - GitLab
 - Bitbucket
 
-gitea is a self-hosted service (run a platform on your own server).
+[gitea](https://gitea.io/en-us/) is a self-hosted service (run a platform on your own server).
 
 ]
-
-
 
 
 
@@ -164,9 +169,9 @@ gitea is a self-hosted service (run a platform on your own server).
 
 Relational Database Management Systems
 - Oracle
-- MySQL
-- PostgreSQL
 - MS SQL Server
+- PostgreSQL
+- MySQL
 - sqlite
 ]
 
@@ -190,12 +195,12 @@ Non-Relational Databases
 Technology
 
 - VirtualBox
-- Docker
+- [Docker](https://docker.com)
 ]
 
 .pull-right[
 
-Cloud Computing
+Clouds
 
 - AWS
 - GPC
@@ -212,24 +217,31 @@ Cloud Computing
 
 .pull-right[
 
-CI/CD Tools
+<img src="colored_factory.jpg" width="550px">
 
-- Travis
-- Gitlab CI
-- GitHub Actions
+
 ]
 
 .pull-right[
 
-Infrastructure as Code
+
+Process Automation
+
+- [Cronjobs](https://crontab.guru/)
+- Apache Airflow
+
+
+Release Automation
+
+- Travis
+- Gitlab CI
+- GitHub Actions
+
+Infrastructure Automation
 
 - Terraform
 - Ansible
 
-Scheduler
-
-- Cronjobs
-- Apache Airflow
 
 ]
 
@@ -239,10 +251,10 @@ Scheduler
 
 ## Support
 
-- Stackoverflow.com
+- [Stackoverflow.com](https://stackoverflow.com/questions/15376075/cluster-analysis-in-r-determine-the-optimal-number-of-clusters/36729465#36729465)
 - Mailing lists
 - community groups: RLadies, WhyR, MiR, FoRwards, AfricaR
-- Documentation, Content Aggregators, e.g., CTV
+- Documentation, Content Aggregators, e.g., [CTV](https://cran.r-project.org/web/views/), [Python Graph Gallery](https://python-graph-gallery.com/)
 
 ---
 
