--- a/docs/block2_session_1.Rmd
+++ b/docs/block2_session_1.Rmd
@@ -170,19 +170,317 @@ applied introduction.
 <div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 
+---
+
+
+## Functional Programming
+
+
+.pull-left[
+
+```{r,eval=FALSE}
+ds_list <- list(iris = iris,
+                mtcars = mtcars)
+lapply(ds_list, summary)
+```
+
+```{r,eval=FALSE}
+
+lapply(ds_list, function(x){
+  sprintf("The dataset contains %d observations.", nrow(x))
+})
+
+
+```
+
+
+
+
+]
+
+.pull-right[
+
+```{r,echo=FALSE}
+ds_list <- list(iris = iris,
+                mtcars = mtcars)
+lapply(ds_list, nrow)
+
+```
+
+
+```{r,echo=FALSE}
+
+lapply(ds_list, function(x){
+  sprintf(
+    "The dataset contains %d observations.",
+          nrow(x)
+    )
+})
+
+
+```
+
+
+]
+
+
+</br>
+</br>
+</br>
+
+=> for more elaborate examples, such as function factories, take a read the [Functional Programming Chapter](http://adv-r.had.co.nz/Functional-programming.html) of Hadley Wickham's book.
 
 
 ---
 
 
-class: center, middle
+## Try Catch
 
-## Where Are you at (in terms of Bloom's taxonomy)? 
+.pull-left[
 
-remember, understand, **apply**, **analyze**, **evaluate**, **create**
+### Without Safety Net
+
+```{r, eval=FALSE}
+
+do_numeric_op <- function(a,b){
+  out <- (a + b)*a
+  message(sprintf(
+    "'%s', '%s' were your inputs.",
+    a,b)
+    )
+  out
+}
 
 
-<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+do_numeric_op(1,"a")
+
+```
+
+
+]
+
+
+---
+
+## Try Catch
+
+
+.pull-left[
+
+### Without Safety Net
+
+```{r, eval=FALSE}
+
+do_numeric_op <- function(a,b){
+  out <- (a + b)*a
+  message(sprintf(
+    "'%s', '%s' were your inputs.",
+    a,b)
+    )
+  out
+}
+
+do_numeric_op(1,"a")
+
+```
+
+"Error in a + b : non-numeric argument to binary operator Calls: [...]"
+
+
+]
+
+
+---
+
+
+
+
+## Try Catch
+
+
+.pull-left[
+
+### Without Safety Net
+
+```{r, eval=FALSE}
+
+do_numeric_op <- function(a,b){
+  out <- (a + b)*a
+  message(sprintf(
+    "'%s', '%s' were your inputs.",
+    a,b)
+    )
+  out
+}
+
+do_numeric_op(1,"a")
+
+```
+
+"Error in a + b : non-numeric argument to binary operator Calls: [...]"
+
+
+]
+
+
+
+.pull-right[
+
+### Safety Net
+
+```{r}
+
+do_numeric_op <- function(a,b){
+  
+  tryCatch({
+    return((a + b)*a)
+  
+  }, error = function(e) message(
+    "Operation went wrong, but function is alive."
+    )
+  )
+  sprintf("'%s', '%s' were your inputs.", a,b)
+}
+
+
+
+```
+
+
+]
+
+
+---
+
+
+## Try Catch
+
+
+.pull-left[
+
+### Without Safety Net
+
+```{r, eval=FALSE}
+
+do_numeric_op <- function(a,b){
+  out <- (a + b)*a
+  message(sprintf(
+    "'%s', '%s' were your inputs.",
+    a,b)
+    )
+  out
+}
+
+do_numeric_op(1,"a")
+
+```
+
+"Error in a + b : non-numeric argument to binary operator Calls: [...]"
+
+
+]
+
+
+
+.pull-right[
+
+### Safety Net
+
+```{r}
+
+do_numeric_op <- function(a,b){
+  
+  tryCatch({
+    return((a + b)*a)
+  
+  }, error = function(e) message(
+    "Operation went wrong, but function is alive."
+    )
+  )
+  sprintf("'%s', '%s' were your inputs.", a,b)
+}
+
+do_numeric_op(2,1)
+
+
+```
+
+
+]
+
+
+---
+
+
+
+
+## Try Catch
+
+.pull-left[
+
+### Without Safety Net
+
+```{r, eval=FALSE}
+
+do_numeric_op <- function(a,b){
+  out <- (a + b)*a
+  message(sprintf(
+    "'%s', '%s' were your inputs.",
+    a,b)
+    )
+  out
+}
+
+do_numeric_op(1,"a")
+
+```
+
+"Error in a + b : non-numeric argument to binary operator Calls: [...]"
+
+
+]
+
+
+
+.pull-right[
+
+### Safety Net
+
+```{r}
+
+do_numeric_op <- function(a,b){
+  
+  tryCatch({
+    return((a + b)*a)
+  
+  }, error = function(e) message(
+    "Operation went wrong, but function is alive."
+    )
+  )
+  sprintf("'%s', '%s' were your inputs.", a,b)
+}
+
+do_numeric_op(2,1)
+do_numeric_op(1,"a")
+
+```
+
+
+]
+
+
+---
+
+
+## Parallel Computing
+
+- throughput problem or not? 
+- profile & benchmark (performance not necessarily linear)
+- overhead vs. performance gain
+- memory
+- OS specific
+
+=> Live Demo
 
 
 ---
@@ -195,7 +493,7 @@ class: center, middle
 
 Naming Conventions </br>
 Think: Package / Library </br>
-Document Before You Start
+Approaches
 
 
 <div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
@@ -255,6 +553,38 @@ class: center, middle
 
 ## Script vs. Function -- Call vs. Definition
 
+.pull-left[
+
+```{r}
+set.seed(123)
+d1 <- rnorm(1000)
+d2 <- rnorm(1000)
+
+d1_mean <- mean(d1)
+d1_sd <- sd(d1)
+d1_q <- quantile(d1)
+desc_stats_d1 <- list(d1_mean = d1_mean,
+                      d1_sd = d1_sd,
+                      d1_q = d1_q)
+
+d2_mean <- mean(d2)
+d2_sd <- sd(d2)
+d2_q <- quantile(d2)
+desc_stats_d2 <- list(d2_mean = d2_mean,
+                      d2_sd = d2_sd,
+                      d2_q = d2_q)
+
+
+```
+
+]
+
+
+.pull-right[
+
+
+]
+
 
 <div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
@@ -262,7 +592,156 @@ class: center, middle
 ---
 
 
+
+## Script vs. Function -- Call vs. Definition
+
+.pull-left[
+
+```{r}
+set.seed(123)
+d1 <- rnorm(1000)
+d2 <- rnorm(1000)
+
+d1_mean <- mean(d1)
+d1_sd <- sd(d1)
+d1_q <- quantile(d1)
+desc_stats_d1 <- list(d1_mean = d1_mean,
+                      d1_sd = d1_sd,
+                      d1_q = d1_q)
+
+d2_mean <- mean(d2)
+d2_sd <- sd(d2)
+d2_q <- quantile(d2)
+desc_stats_d2 <- list(d2_mean = d2_mean,
+                      d2_sd = d2_sd,
+                      d2_q = d2_q)
+
+
+```
+
+]
+
+
+.pull-right[
+
+```{r}
+
+create_basic_desc <- function(distr){
+  out <- list(
+    mean = mean(distr),
+    sd = sd(distr),
+    quantiles = quantile(distr)
+  )
+  out
+}
+
+
+
+```
+
+
+]
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
+---
+
+
+## Script vs. Function -- Call vs. Definition
+
+.pull-left[
+
+```{r}
+set.seed(123)
+d1 <- rnorm(1000)
+d2 <- rnorm(1000)
+
+d1_mean <- mean(d1)
+d1_sd <- sd(d1)
+d1_q <- quantile(d1)
+desc_stats_d1 <- list(d1_mean = d1_mean,
+                      d1_sd = d1_sd,
+                      d1_q = d1_q)
+
+d2_mean <- mean(d2)
+d2_sd <- sd(d2)
+d2_q <- quantile(d2)
+desc_stats_d2 <- list(d2_mean = d2_mean,
+                      d2_sd = d2_sd,
+                      d2_q = d2_q)
+
+
+```
+
+]
+
+
+.pull-right[
+```{r}
+
+create_basic_desc <- function(distr){
+  out <- list(
+    mean = mean(distr),
+    sd = sd(distr),
+    quantiles = quantile(distr)
+  )
+  out
+}
+
+create_basic_desc(d1)
+
+
+
+```
+
+
+]
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
+---
+
+
+
+
 ## Documentation of Functions (Reference)
+
+
+.pull-left[
+
+```{r}
+
+#' Create Basic Descriptive Statistics
+#'
+#' Creates means, standard deviations and default quantiles from an numeric input vector. 
+#' 
+#' @param distr numeric vector drawn from an arbitraty distribution. 
+#' @export 
+create_basic_desc <- function(distr){
+  out <- list(
+    mean = mean(distr),
+    sd = sd(distr),
+    quantiles = quantile(distr)
+  )
+  out
+}
+
+
+```
+
+
+]
+
+.pull-right[
+
+- Roxygen documentation can be rendered .Rd and .html
+- package require documentation of every exported function
+
+]
 
 
 <div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
@@ -280,8 +759,11 @@ class: center, middle
 - **vignettes** Articles' source, elaborate documentation source
 - **inst** additional material, installed with package, e.g., sql files
 - **src** source code that needs to be compiled, e.g., C++
+- **tests** automated tests, often created with a testing framework such as [testthat](https://cran.r-project.org/web/packages/testthat/index.html) or [tinytest](https://cran.r-project.org/web/packages/tinytest/index.html)
 
-In addition every package needs DESCRIPTION and NAMESPACE file. 
+- In addition every package needs DESCRIPTION and NAMESPACE file. 
+- start with an _sandbox.R_ file in the root folder (may be moved to inst/ later on.). 
+- move functions to the R/ folder once they get more mature (documentation, tested)
 
 
 <div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
@@ -290,19 +772,30 @@ In addition every package needs DESCRIPTION and NAMESPACE file.
 ---
 
 
+## Approaches
+
+- Document Before You Start, e.g., write a vignette outline
+- use pseudo code or comments to structure 
+- Peer programming in the beginning (make sure to switch who's on the driver's seat)
+- Reproducible Research (include )
 
 
+---
+
+class: center, middle
+
+## Where Are You At (in Terms of Bloom's Taxonomy)? 
+
+remember, understand, **apply**, **analyze**, **evaluate**, **create**
 
 
+ => Take the survey
 
 
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 
-
-
-
-
-
+---
 
 
 
