--- a/docs/block2_session_2.Rmd
+++ b/docs/block2_session_2.Rmd
@@ -4,7 +4,7 @@ title: |
 subtitle: "Programming with Data"
 author: "@whatsgoodio"
 institute: "KOF, ETH Zurich"
-date: "2020-10-02"
+date: "2020-10-23"
 output:
   xaringan::moon_reader:
     css: ["robot-fonts","more.css"]
@@ -19,11 +19,46 @@ output:
 
 class: center,middle
 
-## Data & Data Formats in Social Sciences
+# Data in Social Sciences
 
 ---
 
+
 ## Data Generating Processes: Simulation
+
+
+.pull-left[
+
+### Why ? 
+
+- Analyzing Complex Systems
+- Demos
+- Proposals / Grants
+
+]
+
+
+.pull-right[
+
+### Process
+
+```{r}
+set.seed(123)
+rnorm(3)
+
+set.seed(1)
+rnorm(3)
+
+set.seed(123)
+rnorm(3)
+
+```
+
+
+
+]
+
+
 
 
 ---
@@ -32,22 +67,150 @@ class: center,middle
 ## Data Generating Processes: Logging / Tracking
 
 
+.pull-left[
+
+### Process
+
+- webservers,
+- mobile phones
+- IoT devices
+- tracking tools, e.g., Google Analytics
+
+]
+
+.pull-right[
+
+### Form of Resulting Data 
+
+- text files
+- granular
+- event based
+- biased (tracking)
+
+]
+
+
 ---
 
 
 ## Data Generating Processes: Surveys
 
 
+.pull-left[
+
+### Process
+
+- multi mode surveys (paper / online forms)
+- Recordings
+
+]
+
+.pull-right[
+
+### Form of Resulting Data 
+
+- rectangular data (1-line-1-observation)
+- text 
+- cross sectional 
+- longitudinal data
+
+
+]
+
+
 ---
 
 
-## Data Generating Processes: APIs, Downloads, Web Scraping
+## Data Generating Processes: APIs, Web Scraping
+
+
+.pull-left[
+
+### Process
+
+- Automated, regular updates
+- Transformation of structured data into analysis friendly datasets
+
+]
+
+.pull-right[
+
+### Form of Resulting Data 
+
+- text strings
+- nested data
+- standardized data
+
+]
+
+
+
+
+
+
+---
+
+
+
+class:center,middle
+
+## What DGPs Have You Worked With? 
+
+## What DGPs Do You Expect to Face in Your Work ? 
 
 
 ---
 
 
 ## Types of Datasets: Time Series
+  
+
+.pull-left[
+
+```{r, message=FALSE, warning=FALSE, fig.height=4}
+library(kofdata)
+library(tstools)
+
+tsl <- window(get_time_series("ch.kof.barometer"))
+tsplot("KOF Barometer" = 
+         window(tsl$ch.kof.barometer,
+                start = c(2010,1))
+       )
+
+```
+
+
+]  
+
+
+.pull-right[
+
+**in memory**
+
+- ts
+- xts
+- tsibble
+- zoo
+
+
+**on disk**
+
+- .csv (long format, .csv Format)
+- .xml
+- .json
+- .RData
+
+
+]
+
+<br>
+<br>
+
+
+
+> (!) Try out the free `tsbox` package to easily switch from one representation 
+to another.
+  
 
 
 ---
@@ -60,37 +223,27 @@ class: center,middle
 
 
 ## Types of Datasets: Panel Data
-
-
+  
+  
 ---
-
-
+  
 ## Types of Datasets: Nested Data
 
 
-
-
-
-class: center,middle
-
-## R's Three Ecosystems to Handle Data
-
---- 
-
-
-## base R
-
-
 ---
 
 
-## data.table
 
 
----
 
 
-## The Tidyverse
+
+
+
+
+
+
+
 
 
 
