--- a/docs/block2_session_2.Rmd
+++ b/docs/block2_session_2.Rmd
@@ -21,6 +21,10 @@ class: center,middle
 
 # Data in Social Sciences
 
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
 ---
 
 
@@ -60,6 +64,9 @@ rnorm(3)
 
 
 
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
 
 ---
 
@@ -88,6 +95,29 @@ rnorm(3)
 - biased (tracking)
 
 ]
+
+<br>
+<br>
+
+-> [full_log]()
+
+```
+2020-10-21T09:03:09.051775+00:00 shinyapps[3063962]: Running on host: 28475eb5e3ba
+2020-10-21T09:03:09.058056+00:00 shinyapps[3063962]: Server version: 1.8.4.1-20
+2020-10-21T09:03:09.058070+00:00 shinyapps[3063962]: LANG: en_US.UTF-8
+2020-10-21T09:03:09.058077+00:00 shinyapps[3063962]: R version: 3.6.1
+2020-10-21T09:03:09.058077+00:00 shinyapps[3063962]: shiny version: 1.4.0
+2020-10-21T09:03:09.058086+00:00 shinyapps[3063962]: httpuv version: 1.5.2
+2020-10-21T09:03:09.058094+00:00 shinyapps[3063962]: rmarkdown version: (none)
+2020-10-21T09:03:09.058094+00:00 shinyapps[3063962]: knitr version: (none)
+2020-10-21T09:03:09.058112+00:00 shinyapps[3063962]: jsonlite version: 1.7.0
+2020-10-21T09:03:09.058121+00:00 shinyapps[3063962]: RJSONIO version: (none)
+2020-10-21T09:03:09.058127+00:00 shinyapps[3063962]: htmltools version: 0.4.0
+
+```
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 
 ---
@@ -118,6 +148,9 @@ rnorm(3)
 ]
 
 
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
 ---
 
 
@@ -129,7 +162,7 @@ rnorm(3)
 ### Process
 
 - Automated, regular updates
-- Transformation of structured data into analysis friendly datasets
+- Transformation of structured data into analysis friendly datasets (regular expressions, DOM extraction)
 
 ]
 
@@ -145,6 +178,7 @@ rnorm(3)
 
 
 
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 
 
@@ -159,7 +193,55 @@ class:center,middle
 ## What DGPs Do You Expect to Face in Your Work ? 
 
 
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
 ---
+
+## Ways to Represent Data
+
+
+.pull-left[
+
+### In Memory
+
+- vector
+- matrix
+- data.frame / data.table / tibble
+- list
+- environment
+
+
+]
+
+.pull-right[
+
+### On Disk
+
+- .RData 
+- feather
+- .xlsx
+- .csv
+- .json
+- .xml
+
+
+
+### In a Database
+
+- interface
+- query language, e.g., SQL
+
+
+]
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
+---
+
+
 
 
 ## Types of Datasets: Time Series
@@ -192,11 +274,14 @@ tsplot("KOF Barometer" =
 - tsibble
 - zoo
 
+> (!) Try out the `tsbox` R package to easily switch from one representation 
+to another.
+
 
 **on disk**
 
-- .csv (long format, .csv Format)
-- .xml
+- [.csv](https://github.com/swissdata/demo) (long format, wide format)
+- [.xml](https://www.nsdp.admin.ch/variable/72.xml)
 - .json
 - .RData
 
@@ -208,36 +293,398 @@ tsplot("KOF Barometer" =
 
 
 
-> (!) Try out the free `tsbox` package to easily switch from one representation 
-to another.
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
   
+
+---
+
+## Types of Datasets: Rectangular Data
+
+
+### Cross Sectional Data
+
+```{r}
+head(mtcars)
+
+```
+
+- multiple variables
+- one period
+
+
+### Panel Data
+
+- multiple variables
+- longitudinal
+- e.g., German Socio Economic Panel (GSOEP)
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 
 ---
 
 
-## Types of Datasets: Cross Sectional Data
-
-
----
-
-
-## Types of Datasets: Panel Data
-  
-  
----
   
 ## Types of Datasets: Nested Data
 
+```{r}
+l <- list()
+l$element1 <- 2
+l$element2 <- head(mtcars,4)
+l
+```
+
+examples: [meta information](https://github.com/swissdata/demo), sector classification (hierarchical), GDP components, translations, attributes, properties, [Geo spatial data](https://github.com/mbannert/maps/blob/master/ch_bfs_regions.geojson)
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
+
+---
+
+class:center,middle
+
+## Block 2, Task 1: [Representing Datasets in Memory and on Disk](https://github.com/h4sci/h4sci-tasks/issues/6)
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+class:center,middle
+
+# R Three Ecosystems to Manipulate Data
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+## Base R
+
+
+.pull-left[
+
+- vectors, matrices, data.frames 
+- no extensions needed
+- much better than its marketing
+- split, apply, combine approach
+
+]
+
+
+.pull-right[
+
+```{r}
+by_cyl <- split(mtcars, mtcars$cyl)
+out <- lapply(by_cyl,
+              function(x) summary(
+                lm(mpg~.,data = x)
+                )
+              )
+
+str(out, max.level = 1)
+
+```
+
+
+
+]
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+## data.table
+
+- written by Matt Dowle et al.
+- fastest ecosystem 
+- SQL reminiscant concept and syntax
+- works with pointers / reference -> it changes objects in place
+
+
+```{r, message=FALSE,warning=FALSE, }
+library(data.table)
+dt <- fread("../data/prog-feedback.csv")
+head(dt)
+
+```
+
+```{r, message=FALSE,warning=FALSE, eval=FALSE}
+# i, j, by
+dt[, obs_avg := rowMeans(.SD), .SDcols = c("basic", "advanced", "structure")]
+head(dt)
+
+```
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+
+---
+
+
+## data.table
+
+- written by Matt Dowle et al.
+- fastest ecosystem 
+- SQL reminiscant concept and syntax
+- works with pointers / reference -> it changes objects in place
+
+
+```{r, message=FALSE,warning=FALSE}
+library(data.table)
+dt <- fread("../data/prog-feedback.csv")
+
+
+# i, j, by
+dt[, obs_avg := rowMeans(.SD), .SDcols = c("basic", "advanced", "structure")]
+head(dt)
+
+
+```
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 ---
 
 
 
 
+## tidyverse
+
+
+- dplyr, tibble, .... 
+- best documentation
+- fast
+- uses references, too
+- very good documentation
+- very popular for interactive use
+- pipe operator: %>% 
+- pretty printing
+
+
+```{r, message=FALSE,warning=FALSE}
+library(dplyr)
+mtcars %>% 
+  filter(cyl > 4) %>% 
+  nrow()
+
+
+```
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+class:center,middle
+
+## Block 2, Task 2: [Three R Ecosystems to Manipulate Data](https://github.com/h4sci/h4sci-tasks/issues/7)
 
 
 
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+class:center,middle
+
+# Databases (DBMS)
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+## When to Use a Database? 
+
+- as a backend e.g., survey (transactional database)
+- in research projects when you want to share data inside your lab
+- when you need to restrict access at different levels
+- to expose data through an API (to external collaborators or the public)
+- need to [integrate with different systems / tools and programming languages](https://github.com/mbannert/timeseriesdb/blob/ca3939a5686f0e68bc3d5cb828d0891795a4eac3/inst/sql/create_functions_collections.sql#L63)
+- specific operations, e.g., spatial data
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+## Which DBMS to Use?
+
+1. **relational** DBMS should be the **default choice**, don't believe me? Believe [him](https://blog.jooq.org/tag/mongodb/). Note, you can use json inside SQL DBs 
+as well. 
+
+2. Which relational DBMS should I Use? 
+
+- SQLite is for prototypes and mobile phones
+- MySQL is for kids
+- PostgreSQL, MS SQL and Oracle are at the same level for most social sciences
+applications
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+## Can You Explain 'Relational'
+
+<img src="timeseriesdb_1_0.png" width="800px">
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+## Are There Any Disadvantages of Databases?
+
+- You have to maintain them, even if you don't need them
+- more setup overhead: dev and production system(s) needed
+- solid, free solutions are only temporal
+- you need an interface for collaborators who don't speak SQL
+- some really, really, really big datasets may ask for specific methods
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+## How Can I Get Going?
+
+### Hosting
+
+- localhost (dev only)
+- docker environment 
+- university VM
+- homeserver
+- cloud (either VM and install on your own, or DB specific Cloud)
+
+### Client
+
+- install drivers locally at OS level
+- install client library (R packages are usually wrappers around C interfaces)
+
+### Design
+
+- integrity (think primary key, foreign key for starters) 
+- Draw up a design... [dbdiagram.io](https://dbdiagram.io/) is fun tool,
+paper & pencil also work pretty well
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+## Start Simple, Catch a Breath of SQL Air with SQLite
+
+
+```{r}
+library(RSQLite)
+db_path = "../data/h4sci.sqlite3"
+con <- dbConnect(RSQLite::SQLite(), db_path)
+dbWriteTable(con, dbQuoteIdentifier(con,"mtcars"), mtcars, overwrite = T)
+dbWriteTable(con, dbQuoteIdentifier(con,"flowers"), iris, overwrite = T)
+
+dbGetQuery(con, "SELECT * FROM flowers LIMIT 3")
+dbGetQuery(con, "SELECT * FROM mtcars WHERE mpg > 30")
+
+
+
+```
+
+Note: Foreign Key Handling is [very limited in SQLite](https://stackoverflow.com/questions/1884818/how-do-i-add-a-foreign-key-to-an-existing-sqlite-table). 
+
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
+
+---
+
+
+
+
+## Accessing Other SQL Databases
+
+
+.pull-left[
+
+### SQLite
+
+```{r,eval=FALSE}
+
+library(RSQLite)
+db_path = "../data/h4sci.sqlite3"
+con <- dbConnect(RSQLite::SQLite(),
+                 db_path)
+
+
+```
+
+
+
+]
+
+.pull-right[
+
+### Postgres
+
+```{r,eval=FALSE}
+
+library(RPostgres)
+con <-  dbConnect(drv = Postgres(),
+                  dbname = "postgres",
+                  user = "postgres",
+                  host = "some.server.or.ip",
+                  password = .rs.askForPassword(
+                    "enter your pw"
+                    )
+                  )
+
+
+```
+
+
+
+]
+
+
+<br>
+<br>
+
+- Essentially the same interface (DBI)
+- server, files are abstracted away
+- (remote) url
+- host, password, port etc. needed for Postgres
+
+
+<div class="my-footer"><span><div class="footer-text" align="right">"Hacking for Social Sciences" by Dr. Matthias Bannert is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a></div></span></div> 
 
 
 
