--- a/docs/block2_session_2.Rmd
+++ b/docs/block2_session_2.Rmd
@@ -761,7 +761,7 @@ class:center,middle
 4. Use the Wrapper
 
 
-Here is [an R example]() to get `r emo::ji("umbrella") ` images from the 
+Here is [an R example](https://github.com/h4sci/h4sci-course/blob/master/examples/met_api.R) to get `r emo::ji("umbrella") ` images from the 
 MET collection. 
 
 
