--- a/docs/block2_session_2.Rmd
+++ b/docs/block2_session_2.Rmd
@@ -99,7 +99,7 @@ rnorm(3)
 <br>
 <br>
 
--> [full_log]()
+-> [full_log](https://github.com/h4sci/h4sci-course/blob/master/data/logs.txt)
 
 ```
 2020-10-21T09:03:09.051775+00:00 shinyapps[3063962]: Running on host: 28475eb5e3ba
